--- a/res/layout/main_fragment.xml
+++ b/res/layout/main_fragment.xml
@@ -39,7 +39,7 @@
 
     <net.evendanan.pushingpixels.FixedViewFlipper
             android:id="@+id/main_pager"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="0px"
             android:layout_weight="1">
         <include layout="@layout/main_fragment_1_main"/>
