--- a/src/main/res/xml/symbols.xml
+++ b/src/main/res/xml/symbols.xml
@@ -23,7 +23,7 @@
         <Key android:codes="35" android:keyLabel="\#"/>
         <Key android:codes="@integer/default_currency_sign_unicode"
             android:keyLabel="@string/default_currency_sign"
-            android:popupCharacters="¤@string/popup_currency_signs"/>
+            android:popupCharacters="@string/popup_currency_signs"/>
         <Key android:codes="37" android:keyLabel="%" android:popupCharacters="‰"/>
         <Key android:codes="94" android:keyLabel="^"/>
         <Key android:codes="38" android:keyLabel="&amp;"/>
